fix: fix pattern matching visit